# Aquamonitor-Python

./: .gitignore  AquaMonitor.py  DownloadExample.py  DownloadShapefile.py  GeneratePlanktonStolpediagram.py  LabwareAdmin.py  LabwareQA.py  LangtjernWeather.py  ProjectNaturindeks.py  ProjectThousandLakes.py  QueryDatatype.py  QueryExamples.py  QueryPlankton.py  QueryWater.py  README.md  aquamonitor.py  pyproject.toml  query_chem.ipynb  requirements.txt  setup.py
.history/examples/: BiotaChemistry_20230608121051.py  BiotaChemistry_20230608121435.py  DownloadExample_20230608121453.py  DownloadMarineChlorofyll_20230608121051.py  DownloadMarineChlorofyll_20230608121451.py  DownloadShapefile_20230608121450.py  GeneratePlanktonStolpediagram_20230608121448.py  LabwareAdmin_20230608121451.py  LabwareQA_20230608121051.py  LabwareQA_20230608121447.py  LangtjernWeather_20230608121446.py  ProjectNaturindeks_20230608121051.py  ProjectNaturindeks_20230608121445.py  ProjectThousandLakes_20230608121443.py  QueryDatatype_20230608121051.py  QueryDatatype_20230608121442.py  QueryExamples_20230608121051.py  QueryExamples_20230608121441.py  QueryWater_20230608121439.py  (+2 more)
aquamonitor/: __init__.py  aquamonitor.py
examples/: BiotaChemistry.py  DownloadExample.py  DownloadMarineChlorofyll.py  DownloadShapefile.py  GeneratePlanktonStolpediagram.py  LabwareAdmin.py  LabwareQA.py  LangtjernWeather.py  ProjectNaturindeks.py  ProjectThousandLakes.py  QueryDatatype.py  QueryExamples.py  QueryGeography.py  QueryPlankton.py  QueryWater.py  Query_pH.py  WaterChemistryQA.py  query_chem.ipynb
